# person_re_id

./: .gitignore  README.md  clip_cut.py  create_dataset.py  llm_person_classification.py  llm_person_matching.py  main.py  main_all.py  person_detect.py  person_matching.py  person_matching_demo.py  pyproject.toml
models/: README.md
