[project]
name = "person-re-id"
version = "0.1.0"
description = "A person re-identification model based on PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "gdown>=5.2.0",
  "numpy==1.26.4",
  "opencv-contrib-python>=4.11.0.86",
  "opencv-python>=4.11.0.86",
  "scipy==1.13.1",
  "tensorboard>=2.19.0",
  "torch==1.13.1",
  "torchreid==0.2.5",
  "torchvision==0.14.1",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
