[project]
name = "person-re-id"
version = "0.1.0"
description = "A person re-identification model based on PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "deep-sort-realtime>=1.3.2",
  "gdown>=5.2.0",
  "numpy==1.26.4",
  "opencv-contrib-python>=4.11.0.86",
  "opencv-python>=4.11.0.86",
  "opencv-python-headless>=4.11.0.86",
  "scipy==1.13.1",
  "shapely>=2.0.7",
  "tensorboard>=2.19.0",
  "torch==1.13.1",
  "torchreid==0.2.5",
  "torchvision==0.14.1",
  "ultralytics>=8.3.98",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
